fix: navbar balance overflowing into page container

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-#root, .App, .main-container {
+#root, .App {
     height: 100vh;
 }
 
